# libeventloop

./: CMakeLists.txt  LICENSE  TODO.txt
doc/en/: LICENSE.en.txt  README.en.txt  libevent-license.txt
doc/ru/: LICENSE.ru.txt  README.ru.txt
examples/: CMakeLists.txt
examples/posix_queue/: CMakeLists.txt  example_loop.cpp  example_loop.h  example_posix_queue.cpp
examples/server/: CMakeLists.txt  example_custom_data.cpp  example_custom_data.h  example_server.cpp  example_server_loop.cpp  example_server_loop.h
include/eventloop/: debug_print.h  event_queue.h  event_queue_item.h  fd_factory.h  file_descriptor_wrapper.h  interface_custom_arg.h  log.h  loop.h  loop_obj_factory.h  server_loop.h  server_loop_base.h  tools.h  types.h
src/: event_queue.cpp  fd_factory.cpp  file_descriptor_wrapper.cpp  log.cpp  loop.cpp  server_loop.cpp  server_loop_base.cpp  tools.cpp
test/: CMakeLists.txt
test/src/: test_event_queue.cpp  test_event_queue.h  test_fd_factory.cpp  test_fd_factory.h  test_loop.cpp  test_loop.h  test_loop_obj_factory.cpp  test_loop_obj_factory.h  test_main.cpp  test_server_loop.cpp  test_server_loop.h  test_server_loop_base.cpp  test_server_loop_base.h
